# GetRec-Telegram-Project

./: .gitignore  .pre-commit-config.yaml  MLDesignDoc.md  Makefile  README.md  pyproject.toml
telegram_etl/: Dockerfile  README.md  docker-compose.yml  extract.py  pyproject.toml
telegram_etl/job_configs/: hacker_news_config.yaml
telegram_etl/scrapping/: main.py
telegram_etl/scrapping/schema/: telegram.py
telegram_etl/scrapping/telegram/: file_loader.py  html_parser.py  scraper.py
telegram_etl/scrapping_pipeline/: dag.py  repos.py  resources.py
telegram_etl/telegram/: html_parser.py  parser.py  scraper.py
telegram_etl/telegram_scrapping/: __init__.py  jobs.py  simple_cli.py
telegram_etl/telegram_scrapping/assets/core/: channels.py  posts.py
telegram_etl/telegram_scrapping/resources/: __init__.py  html_parser.py  parquet_io_manager.py  telegram_resource.py
telegram_etl/telegram_scrapping/schemas/: telegram_post.py
